--- a/Client/app/src/main/res/values/strings.xml
+++ b/Client/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mostra_btn"><u>Mostra tutto</u></string>
-    <string name="termini_condizioni"><![CDATA[Termini & Condizioni]]></string>
+    <string name="termini_condizioni"><![CDATA[D\'accordo con Termini & Condizioni]]></string>
 </resources>
